--- a/packages/components/src/components/Breadcrumbs/components/BreadcrumbItem/BreadcrumbItem.module.css
+++ b/packages/components/src/components/Breadcrumbs/components/BreadcrumbItem/BreadcrumbItem.module.css
@@ -2,7 +2,6 @@
 
 .base {
   --breadcrumb-color: var(--kbq-foreground-contrast-secondary);
-  --breadcrumb-padding: var(--kbq-size-3xs) var(--kbq-size-xs);
   --breadcrumb-outline-width: var(--kbq-size-3xs);
   --breadcrumb-outline-color: transparent;
   --breadcrumb-size: ;
@@ -20,17 +19,18 @@
   gap: var(--kbq-size-xs);
   color: var(--breadcrumb-color);
   border-radius: var(--kbq-size-xs);
-  padding: var(--breadcrumb-padding);
   background-color: var(--breadcrumb-bg-color);
   outline: var(--breadcrumb-outline-width) solid;
   outline-color: var(--breadcrumb-outline-color);
   block-size: var(--breadcrumb-size);
   min-block-size: var(--breadcrumb-size);
   min-inline-size: var(--breadcrumb-size);
+  margin-inline: calc(-1 * var(--breadcrumb-padding-inline));
   transition:
     color var(--kbq-transition-default),
     outline var(--kbq-transition-default),
     background-color var(--kbq-transition-default);
+  padding: var(--breadcrumb-padding-block) var(--breadcrumb-padding-inline);
 
   & > * {
     flex-shrink: 0;
